--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -32,37 +32,14 @@
 
   <!-- tbody>tr>td*2 -->
   <tbody>
-    <tr>
+    <tr *ngFor="let category of categories">
       <td>
-        <strong>Lazer</strong><br>
-        <small>Cimena, parque, praia, etc.</small>
+        <strong>{{ category.name }}</strong><br>
+        <small>{{ category.description }}</small>
       </td>
       <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-sm btn-outline-info me-2">Edit</a>
-        <!-- (click)="deleteCategory(category.id)" -->
-        <a class="btn btn-sm btn-outline-danger">Remove</a>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Lazer</strong><br>
-        <small>Cimena, parque, praia, etc.</small>
-      </td>
-      <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-sm btn-outline-info me-2">Edit</a>
-        <!-- (click)="deleteCategory(category.id)" -->
-        <a class="btn btn-sm btn-outline-danger">Remove</a>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Lazer</strong><br>
-        <small>Cimena, parque, praia, etc.</small>
-      </td>
-      <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-sm btn-outline-info me-2">Edit</a>
-        <!-- (click)="deleteCategory(category.id)" -->
-        <a class="btn btn-sm btn-outline-danger">Remove</a>
+        <a class="btn btn-sm btn-outline-info me-2" [routerLink]="[category.id]">Edit</a>
+        <a class="btn btn-sm btn-outline-danger" (click)="deleteCategory(category)">Remove</a>
       </td>
     </tr>
   </tbody>
